Updated MyProfile page with responsive UI, dark/light mode, and modal edit functionality

--- a/the-canvas-lane-frontend/.env
+++ b/the-canvas-lane-frontend/.env
@@ -1,3 +1,4 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_bG92aW5nLWNoaWNrZW4tNTQuY2xlcmsuYWNjb3VudHMuZGV2JA
 VITE_CLERK_FRONTEND_API=https://loving-chicken-54.clerk.accounts.dev
-VITE_BACKEND_URL=https://5be8-2401-4900-1c9b-2592-7063-5649-4b37-d6f4.ngrok-free.app
+VITE_BACKEND_URL=https://5666-103-86-182-226.ngrok-free.app
+VITE_BACKEND_URL=http://localhost:5000
