Worked on homepage and dark theme

--- a/the-canvas-lane-frontend/.env
+++ b/the-canvas-lane-frontend/.env
@@ -1,4 +1,4 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_bG92aW5nLWNoaWNrZW4tNTQuY2xlcmsuYWNjb3VudHMuZGV2JA
 VITE_CLERK_FRONTEND_API=https://loving-chicken-54.clerk.accounts.dev
-VITE_BACKEND_URL=https://5666-103-86-182-226.ngrok-free.app
+VITE_BACKEND_URL=https://4e31-2401-4900-7fb5-87f6-2986-ff40-c87b-cbea.ngrok-free.app
 VITE_BACKEND_URL=http://localhost:5000
