--- a/the-canvas-lane-frontend/package.json
+++ b/the-canvas-lane-frontend/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.11.0",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-simple-typewriter": "^5.0.1",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
